--- a/templates/base.html
+++ b/templates/base.html
@@ -629,13 +629,13 @@
                 <span class="menu-icon">🎬</span>
                 <span class="menu-text">Galeri</span>
             </a>
-            <a href="/settings" class="menu-link {% if request.path == '/settings' %}active{% endif %}">
+<!--             <a href="/settings" class="menu-link {% if request.path == '/settings' %}active{% endif %}">
                 <span class="menu-icon">⚙️</span>
                 <span class="menu-text">Pengaturan</span>
-            </a>
+            </a> -->
         </nav>
         
-        <div class="menu-divider"></div>
+<!--         <div class="menu-divider"></div>
         
         <div class="menu-footer">
             <div class="menu-user">
@@ -645,7 +645,7 @@
                     <div class="menu-user-role">Paket Gratis</div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     
     <div class="container">
