--- a/templates/base.html
+++ b/templates/base.html
@@ -622,12 +622,8 @@
         
         <nav class="menu-nav">
             <a href="/" class="menu-link {% if request.path == '/' %}active{% endif %}">
-                <span class="menu-icon">📤</span>
-                <span class="menu-text">Upload</span>
-            </a>
-            <a href="/gallery" class="menu-link {% if request.path == '/gallery' %}active{% endif %}">
-                <span class="menu-icon">🎬</span>
-                <span class="menu-text">Galeri</span>
+                <span class="menu-icon">🏠</span>
+                <span class="menu-text">Beranda</span>
             </a>
 <!--             <a href="/settings" class="menu-link {% if request.path == '/settings' %}active{% endif %}">
                 <span class="menu-icon">⚙️</span>
